# CopperTag

./: CMakeLists.txt  README.md
example/: main.cpp
include/Schifra/: schifra_reed_solomon_block.hpp
include/aamed/: AAMED.h  aamedEllipseConstraint.h  aamedLinkMatrix.h  aamedNode_FC.h  aamedParam.h
include/common/: colors.h  common.h  cyber_base_macros.h  cyber_common_macros.h
include/coppertag/: tagDetector.h  tagDetectorParams.h  tagRule.h  tagRuleParams.h
include/pose_esti/: ippe.h  levmarq.h  pose_estimation.h
params/: detectorParams.yaml
src/aamed/: aamedArcGroup.cpp  aamedClass.cpp  aamedEdgeSegment.cpp  aamedEllipseFinding.cpp  aamedEllipseFit.cpp  aamedFsaSegments.cpp  aamedHelper.cpp  aamedInit.cpp  aamedLinkMatrix.cpp  aamedNode_FC.cpp  aamedPolyDP.cpp
src/coppertag_detector/: candidateHelper.cpp  formCorner.cpp  getCandidate.cpp  lineExtraction.cpp  tagDetector.cpp  tagDetectorParams.cpp
src/coppertag_rule/: decoder.cpp  encoder.cpp  tagRule.cpp
src/pose_esti/: ippe.cpp  pose_estimation.cpp
